# QRcade

./: .gitignore  Makefile  README.md
engine/: Cargo.toml
engine/docs/: collision_api.md  drag_and_drop_api.md  entity_api.md  gravity_api.md  index.md  input_api.md  renderable_api.md  script_callbacks.md  text_api.md  tilemap_api.md  timer_api.md  transform_api.md  velocity_api.md
engine/docs/stubs/: engine_api.lua
engine/resources/lua_scripts/: 2048.lua  asteroids.lua  drag_drop.lua  example_script.lua  example_script.luac  example_script_2.lua  example_script_3.lua  example_script_4.lua  gravity_test.lua  physics_system.lua  snake_game.lua
engine/src/: main.rs
engine/src/assets/: asset_manager.rs  mod.rs
engine/src/ecs/: component.rs  mod.rs
engine/src/ecs/components/: component.rs  draggable.rs  gamestate.rs  gravity.rs  mod.rs  sprite.rs  text.rs  tilemap.rs  timer.rs  transform.rs  velocity.rs
engine/src/ecs/systems/: collision_system.rs  drag_drop_system.rs  input_system.rs  mod.rs  movement_system.rs  physics.rs  rendering.rs
engine/src/engine/: mod.rs
engine/src/engine/managers/: collision_manager.rs  drag_drop_manager.rs  entity_manager.rs  gravity_manager.rs  input_manager.rs  mod.rs  state_manager.rs  text_manager.rs  tilemap_manager.rs  timer_manager.rs  transform_manager.rs  velocity_manager.rs
engine/src/game_state/: component.rs  mod.rs  sprite.rs  transform.rs
engine/src/lua/: mod.rs
engine/src/lua_api/: collision_api.rs  entity_api.rs  input_api.rs  mod.rs  renderable_api.rs  state_manager.rs  transform_api.rs
(+23 files in other folders)
